# byzfedau

./: .gitignore  README.md  pyproject.toml  requierements.txt  tester.ipynb
pytorchexample/: task.py
src/: __init__.py  attacks.py  client_app.py  custom_strategy.py  nn.py  server_app.py  task.py  tester.ipynb  utils.py
tests/: test_backdoor.py  test_efficacy.py  test_nets.py
