[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "1.0.0"
description = ""
license = "Apache-2.0"
requires-python = ">=3.9.2,<4.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "krithman"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1
local-epochs = 1
strategy-name = "Custom-FedAvg"
byz-attack-type = "Gaussian Noise" # ["Sign Flip", "Label Flip", "Gaussian Noise", "BackDoor"]
mu = 1.0 # Gaussian Noise mean value
variance = 1.0 # Gaussian Noise variance value
attack-activation-round = 5
num-malicious = 4 # number of malicious users
random-seed = 42
[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10 # number of total users
